# miuraforge

./: .gitignore  AUDITORIA_COMPLETA_2026.md  AUDITORIA_ERRORES_LSP.md  AUDITORIA_ESTRATEGICA_2026.md  AUDITORIA_SUBAGENTES.md  BLOG_ENGINE_PLAN.md  CERTIFICADO_ALINEACION.md  FASE_2_EJECUCION.md  GENTLEMAN_AI_SETUP.md  MIURA_KNOWLEDGE.md  MiuraForge_BlogEngine_PRD.docx  MiuraForge_BlogEngine_PRD.md  PLAN_TRABAJO_BLOG.md  PLAN_TRABAJO_FASES_2026.md  PLAN_TRABAJO_FASES_2026_V2.md  README.md  RESUMEN_IMPLEMENTACION.md  SESSION_MEMORY_20260325.md  Tutorial Completo.txt  auditoria_nvidia_catálogo.md  engram-convention.md  full_nvidia_check.py  guia_modelos_nvidia.md  init_db_test.py  main_orquestador.py  migrar_credenciales.py  nvidia_models_list.txt  pyproject.toml  requirements.txt  test_imports.py  test_nvidia.py  test_replicate.py  transcripcion_gentle.txt
.atl/: skill-registry.md
Docs/: ANALISIS_COMPETENCIA.md  ANALISIS_COMPLETO_MIURA_FORGE.md  Alchemist_2.0_Test_Humo.md  BIO_YOUTUBE_OPTIMIZADA.txt  Bitácora de Forja Miura Forge Engin.md  CALENDARIO_EDITORIAL_2026.md  CHECKLIST_GRABACION.md  DOCTRINA_MARKETING.md  Estrategia_Venta.txt  Evolución Estratégica Miura (Fase IMP).md  FASE_A_SETUP.md  GUIA_VIRTUAL_ENV.md  Guiones_Apertura_Canal.md  Guía Oficial de Tono — Disciplina en Acero.md  INDICE_DOCUMENTACION.md  INSTRUCCIONES_ANTIGRAVITY.md  MIURA_ARCHITECTURE.md  MIURA_WORKFLOW_SD.md  PLAN_FASES_ESTRATEGICAS.md  README.md  SCRIPTS_DIAGNOSTICO.md  auditoria_miura_forge.md  blog_ideas.txt  codigos_paypal.txt  manual_tools.md  motion_forge.txt  motion_forge_playwright_walkthrough.md  notebooklm.txt  veredicto_global.txt  walkthrough.md
audio_cleaner/: audio_cleaner.py  audio_cleaner.txt
auditoria/: lista_negra.txt  miura_auditor_bunker.py
core/: accion_validator.py  alchemist.py  architect.py  audio_auditor.py  blog_alchemist.py  blog_visualizer.py  clusterizador.py  config.py  database.py  db_singleton.py  doctrina_industrial.json  doctrina_industrial.txt  doctrina_prohibida.json  extractor_frases.py  forge_blog.py  hybrid_oracle.py  json_utils.py  logger.py  researcher.py  schemas.py  tendencias.py  video_generator_I2V.py  video_generator_T2V.py  visual_director.py  voice_director.py
deployer/: miura_deployer.py
disciplinaenacero/: PRD_Blog_Engine_MF003.docx  README_DEPLOY.md  [slug].astro  astro.config.mjs  blog.astro  ejemplo_habitos_atomicos.md  forge_blog.py  index.html  netlify.toml  package-lock.json  package.json
doctrina/: dolores_loader.py  ganchos_loader.py  libro1_adn.txt  territorios_loader.py
emisario/: emissary.py
llm/: factory.py  memory_manager.py  providers.py
marketing/: __init__.py  content_gap_analysis.py  copy_optimizer.py  email_sequence.py  funnel_engine.py  launch_playbook.py  launch_timing.py  seo_auditor.py
merch/: merch_hunter.py
motion_forge/: auth_forge.py  motion_forge_playwright.py  queue_manager.py  short_assembler.py  short_assembler.txt  short_assembler_test.py
prompts/: alquimia.txt  arquitecto.txt  auditoria.txt  deployer.txt  purificador.txt  visual.txt  youtube_forge.txt  yt-prompt.txt
scripts/: fix_anclas.py  import_books_to_sheets.py  inject_results.py  run_oracle_for_blogs.py  test_modelos_blog.py  update_atomic.py
skills/: SKILL_REGISTRY_SD.md  SKILL_REGISTRY_v1_backup.md
tests/: test_blog_alchemist.py  test_blog_visualizer.py  test_database.py  test_deployer.py  test_factory.py  test_hybrid_oracle.py  test_marketing.py  test_merch.py
tmp/: check_apertura.py  check_prod.py  check_visuals.py  check_visuals_new.py  fix_notebook.py  forja_apertura_canal.py  test_flux_dev.py  test_google_imagen.py  test_integration.py  test_nebius_logo.py  test_nvidia_logo.py  test_visual_sync.py
tools/: _forja_utils.py  add_text_to_thumbnails.py  alinear_imperio.py  analizar_libro.py  apertura_full_forge.py  apertura_to_sheets.py  common.py  (+27 more)
(+40 files in other folders)
